@@ -1,0 +1,95 @@
+STATISTICS
+  Problem name     : seed
+  Variables        : 7 (0 binary, 5 integer, 0 implicit integer, 2 continuous)
+  Constraints      : 0 initial, 79 maximal
+OBJECTIVE
+  Sense            : minimize
+VARIABLES
+  [integer] <x0>: obj=79, original bounds=[-200,200]
+  [integer] <x3>: obj=61, original bounds=[-200,200]
+  [integer] <x4>: obj=89, original bounds=[-200,200]
+  [integer] <x5>: obj=21, original bounds=[-200,200]
+  [integer] <x6>: obj=-34.53, original bounds=[-200,200]
+  [continuous] <x2>: obj=-39.3, original bounds=[-200,200]
+  [continuous] <x1>: obj=5, original bounds=[-200,200]
+CONSTRAINTS
+  [linear] <_C1>:  +6<x0>[I] -15<x3>[I] -6<x4>[I] +5<x5>[I] +13<x6>[I] +12<x2>[C] -13<x1>[C] <= -62;
+  [linear] <_C10>:  +18<x0>[I] +13<x3>[I] +13<x4>[I] +3<x5>[I] -16<x6>[I] +8<x2>[C] +8<x1>[C] >= 18;
+  [linear] <_C11>:  -<x0>[I] -17<x3>[I] +17<x4>[I] -13<x5>[I] -11<x6>[I] -7<x2>[C] -7<x1>[C] >= 91;
+  [linear] <_C12>:  +3<x0>[I] +6<x3>[I] +11<x4>[I] -<x5>[I] +4<x6>[I] +16<x2>[C] -9<x1>[C] <= -30;
+  [linear] <_C13>:  +7.13<x0>[I] +8.18<x3>[I] +19.01<x4>[I] -13.46<x5>[I] -16.91<x6>[I] -12.49<x2>[C] -6.72<x1>[C] >= 64.92;
+  [linear] <_C14>:  +15<x0>[I] -10<x3>[I] -4<x4>[I] +19<x5>[I] -5<x6>[I] +14<x2>[C] -15<x1>[C] <= 24;
+  [linear] <_C15>:  +4<x0>[I] -2<x3>[I] +4<x4>[I] -15<x5>[I] +18<x6>[I] +11<x2>[C] +7<x1>[C] >= -18;
+  [linear] <_C16>:  +10<x0>[I] -17<x3>[I] +13<x4>[I] +2<x5>[I] -11<x6>[I] +<x2>[C] +11<x1>[C] >= 72;
+  [linear] <_C17>:  -15<x0>[I] +14<x3>[I] +2<x4>[I] +17<x5>[I] -9<x6>[I] +7<x2>[C] -16<x1>[C] <= 4;
+  [linear] <_C2>:  -2<x3>[I] +15<x4>[I] -5<x6>[I] -16<x2>[C] -19<x1>[C] <= 95;
+  [linear] <_C23>:  +16<x0>[I] +7<x3>[I] -5<x4>[I] +13<x5>[I] +3<x6>[I] +11<x2>[C] -16<x1>[C] <= -89;
+  [linear] <_C24>:  -8<x0>[I] +19<x3>[I] +11<x4>[I] +15<x5>[I] -9<x6>[I] -15<x1>[C] <= -26;
+  [linear] <_C25>:  -11.53<x0>[I] -16.21<x3>[I] -9.9<x4>[I] +15.53<x5>[I] -3.07<x6>[I] +8.52<x2>[C] -2.51<x1>[C] <= 98.75;
+  [linear] <_C26>:  -20<x0>[I] -3<x3>[I] -7<x4>[I] +5<x5>[I] -13<x6>[I] +2<x2>[C] +<x1>[C] >= -78;
+  [linear] <_C27>:  -5.47<x0>[I] -2.28<x3>[I] +4.04<x4>[I] -12.21<x5>[I] +9.15<x6>[I] -6.88<x2>[C] +0.51<x1>[C] <= 31.12;
+  [linear] <_C28>:  -15<x0>[I] +2<x3>[I] +19<x4>[I] -5<x5>[I] -16<x6>[I] +19<x2>[C] +13<x1>[C] >= -1;
+  [linear] <_C29>:  +9<x0>[I] +2<x3>[I] -13<x4>[I] -10<x5>[I] +12<x6>[I] +17<x2>[C] +5<x1>[C] >= -63;
+  [linear] <_C3>:  -3<x0>[I] -15<x3>[I] -17<x4>[I] +7<x5>[I] +15<x6>[I] +4<x2>[C] +6<x1>[C] >= -58;
+  [linear] <_C30>:  +13<x3>[I] -16<x4>[I] +8<x5>[I] -2<x6>[I] +2<x2>[C] -19<x1>[C] <= -15;
+  [linear] <_C31>:  -17<x0>[I] +<x3>[I] -13<x4>[I] -18<x5>[I] -5<x6>[I] -6<x2>[C] +14<x1>[C] >= -98;
+  [linear] <_C32>:  +20<x0>[I] -<x3>[I] +2<x4>[I] -<x5>[I] +8<x6>[I] -18<x2>[C] -9<x1>[C] <= 82;
+  [linear] <_C33>:  -11<x0>[I] -12<x3>[I] -11<x4>[I] -15<x5>[I] +11<x6>[I] -14<x2>[C] +16<x1>[C] >= 11;
+  [linear] <_C34>:  -12<x0>[I] -14<x3>[I] +11<x4>[I] +10<x5>[I] -<x6>[I] +16<x2>[C] +5<x1>[C] <= 4;
+  [linear] <_C35>:  -6<x0>[I] -2<x3>[I] +11<x4>[I] +14<x5>[I] -19<x6>[I] -17<x2>[C] +15<x1>[C] <= 51;
+  [linear] <_C36>:  +7<x0>[I] +3<x3>[I] -8<x4>[I] -16<x5>[I] -16<x6>[I] -13<x2>[C] +18<x1>[C] >= -79;
+  [linear] <_C37>:  -7<x0>[I] -5<x3>[I] -8<x4>[I] +11<x5>[I] +8<x6>[I] +14<x2>[C] +7<x1>[C] <= 9;
+  [linear] <_C38>:  -18<x0>[I] +12<x3>[I] -13<x4>[I] +11<x5>[I] +18<x6>[I] +3<x2>[C] -8<x1>[C] <= 6;
+  [linear] <_C39>:  +7<x0>[I] -5<x3>[I] +17<x4>[I] -8<x5>[I] +2<x6>[I] +19<x2>[C] -15<x1>[C] <= -59;
+  [linear] <_C4>:  -0.47<x0>[I] +0.29<x3>[I] -19.78<x4>[I] +19.18<x5>[I] +8.02<x6>[I] -0.28<x2>[C] +15.51<x1>[C] <= -37.19;
+  [linear] <_C40>:  -18<x0>[I] -9<x3>[I] +17<x4>[I] -13<x5>[I] +11<x6>[I] -13<x2>[C] +7<x1>[C] <= 36;
+  [linear] <_C41>:  -9<x0>[I] +14<x3>[I] -5<x4>[I] +12<x5>[I] -3<x2>[C] +11<x1>[C] <= -39;
+  [linear] <_C42>:  -6<x0>[I] -19<x3>[I] -18<x4>[I] +11<x5>[I] +8<x6>[I] -<x2>[C] +7<x1>[C] >= 56;
+  [linear] <_C43>:  +2<x0>[I] -7<x3>[I] -17<x4>[I] +<x5>[I] -19<x6>[I] +17<x2>[C] +<x1>[C] >= -98;
+  [linear] <_C44>:  -5<x0>[I] +3<x3>[I] -17<x4>[I] -20<x5>[I] -15<x6>[I] +3<x2>[C] +2<x1>[C] >= 17;
+  [linear] <_C45>:  +12<x0>[I] +17<x3>[I] +20<x4>[I] -19<x5>[I] -16<x6>[I] -11<x2>[C] +15<x1>[C] >= 21;
+  [linear] <_C46>:  -10<x0>[I] +7<x3>[I] -8<x4>[I] +19<x5>[I] -4<x6>[I] +19<x2>[C] -14<x1>[C] <= -47;
+  [linear] <_C47>:  +16<x0>[I] +15<x3>[I] +<x4>[I] +20<x5>[I] +3<x6>[I] +6<x2>[C] +15<x1>[C] <= 66;
+  [linear] <_C48>:  -5<x0>[I] -3<x3>[I] -13<x4>[I] -18<x5>[I] -16<x6>[I] +7<x2>[C] +4<x1>[C] >= -18;
+  [linear] <_C49>:  -11<x0>[I] +15<x3>[I] +19<x4>[I] +20<x5>[I] -6<x6>[I] -10<x2>[C] <= 41;
+  [linear] <_C5>:  -<x0>[I] +4<x3>[I] -11<x4>[I] +14<x5>[I] +6<x6>[I] -4<x2>[C] +4<x1>[C] <= -84;
+  [linear] <_C50>:  +5<x0>[I] +6<x3>[I] -6<x4>[I] +17<x5>[I] +17<x6>[I] +2<x2>[C] -14<x1>[C] <= 20;
+  [linear] <_C51>: <x0>[I] +12<x3>[I] -7<x4>[I] +18<x5>[I] -12<x6>[I] -3<x2>[C] -14<x1>[C] <= -46;
+  [linear] <_C52>:  +20<x0>[I] -8<x3>[I] -17<x4>[I] -10<x5>[I] -<x6>[I] -12<x2>[C] -18<x1>[C] >= -4;
+  [linear] <_C53>:  -18<x0>[I] +2<x3>[I] -10<x4>[I] +6<x5>[I] +11<x6>[I] -15<x2>[C] +15<x1>[C] <= 44;
+  [linear] <_C54>:  +10<x0>[I] -10<x3>[I] +2<x4>[I] +8<x5>[I] -2<x6>[I] -20<x2>[C] -14<x1>[C] <= 14;
+  [linear] <_C55>:  +14<x0>[I] +6<x3>[I] +20<x4>[I] +17<x5>[I] +15<x2>[C] +3<x1>[C] <= 24;
+  [linear] <_C56>:  +15<x0>[I] -2<x3>[I] -10<x4>[I] -5<x5>[I] +11<x6>[I] -6<x2>[C] +<x1>[C] >= -76;
+  [linear] <_C57>:  -4<x0>[I] -15<x3>[I] +<x4>[I] +11<x5>[I] -<x6>[I] +7<x2>[C] +11<x1>[C] >= 36;
+  [linear] <_C58>:  +15<x0>[I] +7<x3>[I] -14<x4>[I] -<x5>[I] -7<x6>[I] -15<x2>[C] +13<x1>[C] >= 86;
+  [linear] <_C59>:  -<x0>[I] -13<x3>[I] +13<x4>[I] -13<x5>[I] +<x6>[I] +6<x2>[C] -15<x1>[C] >= 36;
+  [linear] <_C6>:  +9<x0>[I] +8<x3>[I] +15<x4>[I] +10<x5>[I] +12<x6>[I] +4<x2>[C] -19<x1>[C] <= 17;
+  [linear] <_C60>:  +11<x0>[I] +4<x3>[I] -9<x4>[I] -12<x5>[I] +3<x6>[I] -12<x2>[C] +12<x1>[C] >= 11;
+  [linear] <_C61>:  -6<x0>[I] -2<x3>[I] +6<x4>[I] -2<x5>[I] +12<x6>[I] +<x2>[C] +8<x1>[C] <= 69;
+  [linear] <_C62>:  -6<x0>[I] +3<x3>[I] -20<x4>[I] +8<x5>[I] +19<x6>[I] -6<x2>[C] +7<x1>[C] <= 61;
+  [linear] <_C63>:  -10<x0>[I] +14<x3>[I] +14<x4>[I] +5<x5>[I] +17<x6>[I] +<x2>[C] <= -46;
+  [linear] <_C64>:  -<x0>[I] -17<x3>[I] -12<x4>[I] +6<x5>[I] +13<x6>[I] -8<x2>[C] +6<x1>[C] >= -42;
+  [linear] <_C65>:  -<x0>[I] -3<x3>[I] +7<x4>[I] +13<x5>[I] +8<x6>[I] -10<x2>[C] -18<x1>[C] <= -91;
+  [linear] <_C66>:  +17.43<x0>[I] +19.95<x3>[I] -15.47<x4>[I] +7.58<x5>[I] -7.75<x6>[I] -2.25<x2>[C] -7.5<x1>[C] <= -27.38;
+  [linear] <_C67>:  -2<x0>[I] -12<x3>[I] +5<x4>[I] -10<x5>[I] -12<x6>[I] -5<x2>[C] -12<x1>[C] >= 70;
+  [linear] <_C68>:  -19.67<x0>[I] +3.47<x3>[I] +10.79<x4>[I] -2.45<x5>[I] -13.89<x6>[I] +9.62<x2>[C] +0.27<x1>[C] <= 29.98;
+  [linear] <_C69>:  +18<x0>[I] -5<x3>[I] -9<x4>[I] +4<x5>[I] -17<x6>[I] +16<x2>[C] +15<x1>[C] >= 12;
+  [linear] <_C7>:  +2<x0>[I] +2<x3>[I] +6<x4>[I] -6<x5>[I] +10<x6>[I] +4<x2>[C] +5<x1>[C] <= -18;
+  [linear] <_C70>:  +12<x0>[I] -9<x3>[I] -12<x4>[I] -11<x5>[I] +6<x6>[I] +15<x2>[C] +8<x1>[C] >= -47;
+  [linear] <_C71>:  +14<x0>[I] +11<x3>[I] +13<x4>[I] +16<x5>[I] +3<x6>[I] -20<x2>[C] +2<x1>[C] <= -0;
+  [linear] <_C72>:  -3<x0>[I] -9<x3>[I] -4<x4>[I] +19<x5>[I] +12<x6>[I] +13<x2>[C] -19<x1>[C] <= -71;
+  [linear] <_C73>:  -9<x0>[I] -20<x3>[I] -17<x4>[I] -2<x5>[I] -10<x6>[I] -14<x2>[C] -18<x1>[C] >= -31;
+  [linear] <_C74>:  -14<x0>[I] +8<x3>[I] -7<x4>[I] -16<x5>[I] -15<x6>[I] +16<x2>[C] +16<x1>[C] >= 10;
+  [linear] <_C75>:  +2<x0>[I] -14<x3>[I] -4<x4>[I] +<x5>[I] -17<x6>[I] +11<x2>[C] -7<x1>[C] >= 80;
+  [linear] <_C76>:  +4.1<x0>[I] +0.49<x3>[I] +15.18<x4>[I] +6.88<x5>[I] -17.39<x6>[I] -18.37<x2>[C] +19.14<x1>[C] >= 64.37;
+  [linear] <_C77>:  -7<x0>[I] -<x3>[I] +13<x4>[I] +11<x5>[I] -6<x6>[I] +7<x2>[C] +15<x1>[C] <= -64;
+  [linear] <_C78>:  -3<x0>[I] +4<x3>[I] -7<x4>[I] +20<x5>[I] +10<x6>[I] +2<x2>[C] -<x1>[C] <= -31;
+  [linear] <_C79>:  +5<x0>[I] +20<x3>[I] -9<x4>[I] -8<x5>[I] -13<x6>[I] -6<x2>[C] -14<x1>[C] >= 95;
+  [linear] <_C8>:  -2<x0>[I] +16<x3>[I] -15<x4>[I] -10<x5>[I] +2<x6>[I] +8<x2>[C] +5<x1>[C] >= 57;
+  [linear] <_C80>:  -5<x0>[I] +18<x3>[I] -5<x4>[I] -11<x5>[I] -18<x6>[I] +13<x2>[C] +10<x1>[C] >= -90;
+  [linear] <_C81>:  -13<x0>[I] +2<x3>[I] +18<x4>[I] +16<x5>[I] +4<x6>[I] +2<x2>[C] +4<x1>[C] <= -20;
+  [linear] <_C82>:  -9<x0>[I] -14<x3>[I] +10<x4>[I] -20<x5>[I] -17<x6>[I] -11<x2>[C] +16<x1>[C] >= -71;
+  [linear] <_C83>:  -16<x0>[I] -8<x3>[I] -3<x4>[I] -6<x5>[I] -<x6>[I] +19<x2>[C] -5<x1>[C] >= -54;
+  [linear] <_C84>:  -<x0>[I] +2<x3>[I] +20<x4>[I] +11<x5>[I] -5<x6>[I] +16<x2>[C] +<x1>[C] <= 20;
+  [linear] <_C85>:  -13<x0>[I] -16<x3>[I] -5<x4>[I] +13<x5>[I] +10<x6>[I] -10<x2>[C] -14<x1>[C] <= -65;
+END
