@@ -3787,7 +3787,7 @@ SCIP_RETCODE SCIPvarFix(
       SCIPsetDebugMsg(set, " -> variable already fixed to %g (fixedval=%g): infeasible=%u\n", var->locdom.lb, fixedval, *infeasible);
       return SCIP_OKAY;
    }
-   else if( (SCIPvarGetType(var) != SCIP_VARTYPE_CONTINUOUS && !SCIPsetIsFeasIntegral(set, fixedval))
+   else if( ( SCIPvarIsIntegral(var) && !SCIPsetIsFeasIntegral(set, fixedval) )
       || SCIPsetIsFeasLT(set, fixedval, var->locdom.lb)
       || SCIPsetIsFeasGT(set, fixedval, var->locdom.ub) )
    {
@@ -3822,28 +3822,25 @@ SCIP_RETCODE SCIPvarFix(
        */
       SCIPlpDecNLoosevars(lp);
 
-      /* change variable's bounds to fixed value (thereby removing redundant implications and variable bounds) */
+      /* free hole lists */
       holelistFree(&var->glbdom.holelist, blkmem);
       holelistFree(&var->locdom.holelist, blkmem);
+
+      /* adjust fixed value */
+      if( SCIPvarIsIntegral(var) )
+         fixedval = SCIPsetRound(set, fixedval);
+
+      /* change variable bounds to fixed value */
       SCIP_CALL( SCIPvarChgLbGlobal(var, blkmem, set, stat, lp, branchcand, eventqueue, cliquetable, fixedval) );
       SCIP_CALL( SCIPvarChgUbGlobal(var, blkmem, set, stat, lp, branchcand, eventqueue, cliquetable, fixedval) );
 
-      if( var->glbdom.lb != var->glbdom.ub )  /*lint !e777*/
-      {
-         /* explicitly set variable's bounds if the fixed value was in epsilon range of the old bound (so above call didn't set bound) */
-         if( SCIPvarGetType(var) != SCIP_VARTYPE_CONTINUOUS )
-         {
-            /* if not continuous variable, then make sure variable is fixed to integer value */
-            assert(SCIPsetIsIntegral(set, fixedval));
-            fixedval = SCIPsetRound(set, fixedval);
-         }
-         var->glbdom.lb = fixedval;
-         var->glbdom.ub = fixedval;
-      }
+      /* explicitly set variable's bounds if the fixed value was in epsilon range of the old bound (so above call didn't set bound) */
+      var->glbdom.lb = fixedval;
+      var->glbdom.ub = fixedval;
 
       /* ensure local domain is fixed to same value as global domain */
-      var->locdom.lb = var->glbdom.lb;
-      var->locdom.ub = var->glbdom.ub;
+      var->locdom.lb = fixedval;
+      var->locdom.ub = fixedval;
 
       /* delete implications and variable bounds information */
       SCIP_CALL( SCIPvarRemoveCliquesImplicsVbs(var, blkmem, cliquetable, set, FALSE, FALSE, TRUE) );
@@ -7254,6 +7251,11 @@ SCIP_RETCODE SCIPvarChgLbGlobal(
    case SCIP_VARSTATUS_LOOSE:
       if( newbound > SCIPvarGetLbLocal(var) )
       {
+         /* ensure that the local bound change is not blocked */
+         if( newbound > SCIPvarGetUbLocal(var) )
+         {
+            SCIP_CALL( SCIPvarChgUbLocal(var, blkmem, set, stat, lp, branchcand, eventqueue, newbound) );
+         }
          SCIP_CALL( SCIPvarChgLbLocal(var, blkmem, set, stat, lp, branchcand, eventqueue, newbound) );
       }
       SCIP_CALL( varProcessChgLbGlobal(var, blkmem, set, stat, lp, branchcand, eventqueue, cliquetable, newbound) );
@@ -7397,6 +7399,11 @@ SCIP_RETCODE SCIPvarChgUbGlobal(
    case SCIP_VARSTATUS_LOOSE:
       if( newbound < SCIPvarGetUbLocal(var) )
       {
+         /* ensure that the local bound change is not blocked */
+         if( newbound < SCIPvarGetLbLocal(var) )
+         {
+            SCIP_CALL( SCIPvarChgLbLocal(var, blkmem, set, stat, lp, branchcand, eventqueue, newbound) );
+         }
          SCIP_CALL( SCIPvarChgUbLocal(var, blkmem, set, stat, lp, branchcand, eventqueue, newbound) );
       }
       SCIP_CALL( varProcessChgUbGlobal(var, blkmem, set, stat, lp, branchcand, eventqueue, cliquetable, newbound) );
