@@ -11,6 +11,7 @@ Fixed bugs
 - use epsilon tolerance for bound implications of dual substitutions in dualPresolve() of cons_linear.c
 - fixed timeouts due to race conditions when using TPI=omp
 - respect fixing if variable is declared binary in bounds section of mps file
+- force local bounds to adjusted value when fixing variable
 
 Build system
 ------------
